SERVER-17627 If getMore cursor is not found, report the cursor id